; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tlclient.c_client_command_generator.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tlclient.c_client_command_generator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8* }

@client_command_generator.len = internal global i32 0, align 4
@client_command_generator.idx = internal global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c"(\00", align 1
@CMD = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i32)* @client_command_generator to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @client_command_generator(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %19, label %9

9:                                                ; preds = %2
  store i32 0, i32* @client_command_generator.idx, align 4
  %10 = load i8*, i8** %4, align 8
  %11 = call i32 @strlen(i8* %10)
  store i32 %11, i32* @client_command_generator.len, align 4
  %12 = load i8*, i8** %4, align 8
  %13 = load i32, i32* @client_command_generator.len, align 4
  %14 = call i32 @strncmp(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8* %12, i32 %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %18, label %16

16:                                               ; preds = %9
  %17 = call i8* @strdup(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i8* %17, i8** %3, align 8
  br label %42

18:                                               ; preds = %9
  br label %19

19:                                               ; preds = %18, %2
  br label %20

20:                                               ; preds = %19, %40
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CMD, align 8
  %22 = load i32, i32* @client_command_generator.idx, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* @client_command_generator.idx, align 4
  %24 = sext i32 %22 to i64
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i64 %24
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i8*, i8** %26, align 8
  store i8* %27, i8** %6, align 8
  %28 = load i8*, i8** %6, align 8
  %29 = icmp eq i8* %28, null
  br i1 %29, label %30, label %31

30:                                               ; preds = %20
  br label %41

31:                                               ; preds = %20
  %32 = load i8*, i8** %6, align 8
  %33 = load i8*, i8** %4, align 8
  %34 = load i32, i32* @client_command_generator.len, align 4
  %35 = call i32 @strncmp(i8* %32, i8* %33, i32 %34)
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %40, label %37

37:                                               ; preds = %31
  %38 = load i8*, i8** %6, align 8
  %39 = call i8* @strdup(i8* %38)
  store i8* %39, i8** %3, align 8
  br label %42

40:                                               ; preds = %31
  br label %20

41:                                               ; preds = %30
  store i8* null, i8** %3, align 8
  br label %42

42:                                               ; preds = %41, %37, %16
  %43 = load i8*, i8** %3, align 8
  ret i8* %43
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @strncmp(i8*, i8*, i32) #1

declare dso_local i8* @strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
